# JarabaImpactPlatformSaaS

./: .env.ci  .env.example  .gitignore  .lando.yml  .lintstagedrc.json  .mcp.json  .trivyignore  CLAUDE.md  ai-asset-registry.json  apply_entity_updates.sh  architecture.yaml  clear_cache.php  composer.json  detect_missing_icons.php  fitness.yml  fix_settings.php  package.json  patches.lock.json  php.ini  phpcs-baseline.json  phpstan-baseline-whatsapp.neon  phpstan-baseline.neon  phpstan-security.neon  phpstan.neon  phpunit.xml  rebuild_cache.php  temp_settings_local.php  trivy.yaml
.claude/: settings.json
.github/: dependabot.yml  lighthouse-budget.json
.husky/: pre-commit
.lando/: my.cnf  redis.conf
.zap/: rules.tsv
docs/: 00_DIRECTRICES_PROYECTO.md  00_DOCUMENTO_MAESTRO_ARQUITECTURA.md  00_FLUJO_TRABAJO_CLAUDE.md  00_INDICE_GENERAL.md  07_VERTICAL_CUSTOMIZATION_PATTERNS.md  validators-reference.md
monitoring/: docker-compose.monitoring.yml
patches/: league-oauth2-linkedin-openid-connect.patch  stevenmaguire-oauth2-microsoft-identity-platform-v2.patch
scripts/: aiops-production.sh  audit-cases-status.php  audit-jarabaimpact.php  audit-ped-es.php  audit-ped-metasite.php  check-lang-status.php  ci-notify-email.php  create-blog-articles.php  create-case-studies.php  create_vertical_tokens.php  debug-500.php  deploy.sh  k6-load-test.js  (+29 more)
sdk/python/: pyproject.toml
sdk/python/jaraba/: __init__.py  client.py  exceptions.py
sdk/python/jaraba/resources/: __init__.py  agents.py  analytics.py  billing.py  content.py  copilot.py  crm.py  tenants.py  webhooks.py
(+11211 files in other folders)
